# statistical-analysis-zybook

./: LICENSE  README.md  pyproject.toml
automobile_collisions/: automobile_collisions_analysis.ipynb  seaborn_learn.ipynb
unemployment_rates/: unemployment.csv  unemployment_rate_analysis.ipynb
